--- a/crypto_dating/package.json
+++ b/crypto_dating/package.json
@@ -16,7 +16,8 @@
     "axios": "^1.12.2",
     "eslint-plugin-vue": "^10.5.0",
     "lucide-vue-next": "^0.344.0",
-    "vue": "^3.4.0"
+    "vue": "^3.4.0",
+    "vue-router": "^4.6.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
